--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Fly test Python app</title>
 </head>
 <body>
 <h1>Hello from Fly</h1>
 {% if name %}
-<h2>and hello to {{name}}</h2>
+<h2>And hello to {{name | title}}</h2>
 {% endif %}
 </body>
 </html>
